--- a/api/package.json
+++ b/api/package.json
@@ -10,14 +10,23 @@
    "dependencies": {
       "bcryptjs": "^2.4.3",
       "body-parser": "^1.19.0",
+      "chalk": "^2.4.2",
+      "compression": "^1.7.4",
       "cors": "^2.8.5",
+      "date-fns": "^2.6.0",
       "debug": "^4.1.1",
       "express": "^4.17.1",
       "express-validator": "^6.2.0",
       "faker": "^4.1.0",
+      "helmet": "^3.21.2",
+      "jsonwebtoken": "^8.5.1",
+      "lodash": "^4.17.15",
+      "module-alias": "^2.2.2",
       "mongodb": "^3.3.3",
       "mongoose": "^5.7.7",
       "nodemailer": "^6.3.1",
+      "nodemailer-mailgun-transport": "^1.4.0",
+      "url-slug": "^2.2.0",
       "validator": "^12.0.0"
    },
    "devDependencies": {
