--- a/front/package.json
+++ b/front/package.json
@@ -6,27 +6,29 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "date-fns": "^2.6.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.2.0",
-    "faker": "^4.1.0",
-    "helmet": "^3.21.2",
-    "jsonwebtoken": "^8.5.1",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
+    "connected-react-router": "^6.5.2",
+    "date-fns": "^2.7.0",
+    "formik": "^2.0.4",
+    "history": "^4.10.1",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
-    "mongodb": "^3.3.3",
-    "mongoose": "^5.7.7",
-    "nodemailer": "^6.3.1",
-    "nodemailer-mailgun-transport": "^1.4.0",
-    "url-slug": "^2.2.0",
-    "validator": "^12.0.0"
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-day-picker": "^7.4.0",
+    "react-dom": "^16.12.0",
+    "react-loading": "^2.0.3",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "recharts": "^1.8.5",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
